--- a/app/views/workallocation/pages/lms.html
+++ b/app/views/workallocation/pages/lms.html
@@ -46,9 +46,9 @@ My work
               <td data-label="Date">Review respondent evidence</td>
 
                 <td data-label="Amount">{{govukTag({
-      text: "dd/mm/yyyy",
-      classes: "govuk-tag--red"
-      })}} </td>
+                text: now | date( 'subtract', 2, 'days' ) | date,
+                classes: "govuk-tag--red"
+              })}} </td>
       <td data-label="Date">Judge Beech</td>
             </tr>
           </tbody>
