--- a/app/views/workallocation/pages/wa-mycases.html
+++ b/app/views/workallocation/pages/wa-mycases.html
@@ -59,23 +59,23 @@ My work
     </thead>
     <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-pj">Patti Jo</a></td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
         <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 50, "day") | date( "D MMMM YYYY" ) }}</td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("add", 150, "day") | date( "D MMMM YYYY" ) }}</td>
         <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
         <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
       </tr>
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-hr">Hudson Remi</a></td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
         <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
-        <td class="govuk-table__cell">DD/MM/YYYY </td>
+        <td class="govuk-table__cell">{{ now |  date("subtract", 80, "day") | date( "D MMMM YYYY" ) }} </td>
         <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
         <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
         <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
