--- a/app/views/workallocation/pages/wa-pj-t.html
+++ b/app/views/workallocation/pages/wa-pj-t.html
@@ -88,9 +88,9 @@ Case details
             <h2 class="govuk-heading-m">Active tasks</h2>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <p class="govuk-body"><strong>Generate decision and reasons</strong> <span class="hmcts-badge_right">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--yellow"
-})}}</span></p>
+            text: now | date( 'subtract', 5, 'days' ) | date,
+            classes: "govuk-tag--red"
+          })}}</span></p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
