--- a/app/views/workallocation/pages/wa-mytasks-o.html
+++ b/app/views/workallocation/pages/wa-mytasks-o.html
@@ -63,10 +63,11 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-          <td class="govuk-table__cell"> {{govukTag({
-          text: "dd/mm/yyyy",
-          classes: "govuk-tag--red"
-        })}}</td>
+            <td class="govuk-table__cell">{{govukTag({
+            text: now | date( 'subtract', 5, 'days' ) | date,
+            classes: "govuk-tag--red"
+          })}}
+          </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-jo" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -81,13 +82,13 @@ My work
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
             </svg></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="/workallocation/pages/wa-PA-00321-2018">Generate decision and reasons</a></td>
-          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag ({text: "dd/mm/yyyy",
-                                classes: "govuk-tag--yellow"
-                              })}} </td>
+          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag({
+          text: now | date( 'add', 1, 'days' ) | date,
+          classes: "govuk-tag--yellow"
+        })}}</td>
           <!--    <td class="govuk-table__cell">N/A<a href="#"></a></td> -->
           <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
         </tr>
-
         <tr class="govuk-table__row">
 
           <td colspan="7" class="right"> <a href="#" class="right">Reassign</a> <a href="#" class="right">Unassign</a> <a href="/workallocation/pages/wa-PA-00321-2018" class="right_tl">Go to tasks</a></td>
