--- a/app/views/workallocation/pages/wa-mytasks-u.html
+++ b/app/views/workallocation/pages/wa-mytasks-u.html
@@ -72,8 +72,8 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-          <td class="govuk-table__cell"> {{govukTag({
-          text: "dd/mm/yyyy",
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'subtract', 5, 'days' ) | date,
           classes: "govuk-tag--red"
         })}}</td>
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
@@ -89,9 +89,10 @@ My work
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
             </svg></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
-          <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
-                                classes: "govuk-tag--yellow"
-                              })}} </td>
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'add', 1, 'days' ) | date,
+          classes: "govuk-tag--yellow"
+        })}}</td>
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
       </tbody>
