content update to match switch back to wildcard on name

--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -161,10 +161,10 @@ Case details
                 <!--  NAME   -->
                 <div class="govuk-form-group">
                     <label class="govuk-label govuk-!-font-weight-bold" for="names">
-                        Name
+                        Full name
                     </label>
                     <div id="names-hint" class="govuk-hint">
-                        For example, full or part name of a party or solicitor.
+                        For example, name of a party or solicitor.
                     </div>
                     <input class="govuk-input govuk-input--width-20" id="names" name="names" type="text" spellcheck="false"  value="{{ data.names }}">
                 </div>
