--- a/app/views/workallocation/pages/wa-PA-00467-2017-all.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-all.html
@@ -93,9 +93,9 @@ Case details
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
             <p class="govuk-body"><strong>Allocate a hearing judge</strong> <span class="hmcts-badge_right">{{govukTag({
-        text: "dd/mm/yyyy",
-        classes: "govuk-tag--grey"
-        })}}</span></p>
+            text: now | date( 'subtract', 2, 'days' ) | date,
+            classes: "govuk-tag--red"
+          })}}</span></p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
