--- a/app/views/workallocation/pages/wa-allwork-none-at.html
+++ b/app/views/workallocation/pages/wa-allwork-none-at.html
@@ -169,9 +169,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application case</a></td>
                 <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--grey"
-                      })}}</td>
+                text: now | date( 'add', 5, 'days' ) | date,
+                classes: "govuk-tag--grey"
+              })}}</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
