--- a/app/views/workallocation/pages/wa-allwork-sp-y.html
+++ b/app/views/workallocation/pages/wa-allwork-sp-y.html
@@ -116,9 +116,9 @@ My work
       Priority
     </label>
     <select class="govuk-select" id="sort" name="sort" style="width:100%">
-      <option value="updated" selected>All</option>
+      <option value="updated" >All</option>
       <option value="views">Urgent (red)</option>
-      <option value="views">Due (yellow)</option>
+      <option value="views" selected>Due (yellow)</option>
       <option value="comments">New (grey)</option>
     </select>
 
@@ -160,10 +160,10 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review FTPA application</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--yellow"
-                      })}}</td>
+                <td class="govuk-table__cell">{{govukTag({
+                text: now | date( 'subtract', 0, 'days' ) | date,
+                classes: "govuk-tag--yellow"
+              })}}</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -174,10 +174,10 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application decision</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--yellow"
-                      })}}</td>
+                <td class="govuk-table__cell">{{govukTag({
+                text: now | date( 'subtract', 0, 'days' ) | date,
+                classes: "govuk-tag--yellow"
+              })}}</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
