--- a/app/views/workallocation/pages/wa-allwork.html
+++ b/app/views/workallocation/pages/wa-allwork.html
@@ -160,9 +160,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
                 <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--red"
-                      })}}</td>
+                text: now | date( 'subtract', 3, 'days' ) | date,
+                classes: "govuk-tag--red"
+              })}}</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -174,9 +174,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">	Review application case</a></td>
                 <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--red"
-                      })}}</td>
+                text: now | date( 'subtract', 2, 'days' ) | date,
+                classes: "govuk-tag--red"
+              })}}</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Winters</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -188,9 +188,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review FTPA application</a></td>
                 <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--yellow"
-                      })}}</td>
+                text: now | date( 'subtract', 0, 'days' ) | date,
+                classes: "govuk-tag--yellow"
+              })}} </td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -202,9 +202,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application decision</a></td>
                 <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--yellow"
-                      })}}</td>
+                text: now | date( 'subtract', 0, 'days' ) | date,
+                classes: "govuk-tag--yellow"
+              })}} </td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -215,10 +215,10 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--yellow"
-                      })}}</td>
+                <td class="govuk-table__cell">{{govukTag({
+                text: now | date( 'subtract', 0, 'days' ) | date,
+                classes: "govuk-tag--yellow"
+              })}}</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -229,10 +229,10 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application case</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--grey"
-                      })}}</td>
+                <td class="govuk-table__cell">{{govukTag({
+                text: now | date( 'add', 5, 'days' ) | date,
+                classes: "govuk-tag--grey"
+              })}}</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -249,9 +249,10 @@ My work
                                               C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
                   </svg></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
-                <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
-                                              classes: "govuk-tag--grey"
-                                            })}} </td>
+                <td class="govuk-table__cell">{{govukTag({
+                text: now | date( 'add', 12, 'days' ) | date,
+                classes: "govuk-tag--grey"
+              })}} </td>
                                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
