--- a/app/views/workallocation/pages/change.html
+++ b/app/views/workallocation/pages/change.html
@@ -12,7 +12,7 @@ My work
                <h1 class="govuk-heading-xl">My work</h1>
           </div>
     </div>
-    <p>See your tasks and view tasks available for you to pick up.</p>
+    <p>Access tasks and cases.</p>
     <div class="hmcts-scrollable-pane">
       <div class="hmcts-scrollable-pane__wrapper">
         <nav class="hmcts-sub-navigation">
